--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "",
   "description": "",
   "author": "",
-  "proxy": "http://localhost:3003",
-  "license": "",
+   "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
@@ -29,6 +28,7 @@
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "http-proxy": "^1.18.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
