--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "",
   "description": "",
   "author": "",
-   "license": "",
+  "license": "",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
     "dev": "webpack --watch --mode=development",
     "prod": "webpack --mode=production",
-    "start": "nodemon server/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --colors",
-    "seed": "node db/seed.js"
+    "start": "nodemon server/index.js"
+
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "aws-sdk": "^2.640.0",
-    "axios": "^0.19.2",
     "babel-watch": "^7.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
